# getx-for-qt6

./: .gitignore  FLET_VS_PYSIDE6.md  README.md  README.md~  create_qt6_mvc_app.bat  create_qt6_mvc_app.sh  create_qt6_mvc_app.sh~  limpar_cache.sh  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
PVRV/: Dicas de uso.md  Documento sem título~  fleting_pyside6_scaffold.sh
PVRV/pvrv_qt6/: main.py
docs/: index.es.md  index.md  index.pt.md
docs gemini/: ARCHITECTURE.md  CHECKLIST.md
etl-palkia-pdf-extractor/data/: app.db
fleting/cli/: cli.py
gemini/: BACKEND_SYSTEMS_GUIDE.md  CLI_GUIDE.md  COMPONENTS_TEMPLATE.md  DATABASE_CRUD_GUIDE.md  SOLID_MVC_MINDSET.md
meu_novo_app/core/: base_view.py
meu_projeto_novo_qt6/data/: app.db
my_template/configs/: app_config.py
projeto_elite_clonado/: styles.py
projeto_elite_clonado/controllers/: home_controller.py
projeto_elite_clonado/core/: database.py  i18n.py  logger.py  router.py
projeto_elite_clonado/data/: app.db
projeto_elite_producao/: .fleting  main.py  styles.py
projeto_elite_producao/configs/: app_config.py  routes.py
projeto_elite_producao/controllers/: home_controller.py
projeto_elite_producao/core/: i18n.py  logger.py  router.py
projeto_elite_producao/data/: app.db
projeto_pyside6/configs/: app_config.py  routes.py
projeto_pyside6/core/: i18n.py
pvrv_advanced/: main.py  styles.py
pvrv_advanced/core/: logger.py  (+2 more)
pvrv_qt6/: runtime_imports.py
teste_final_elite/: .fleting  main.py  runtime_imports.py
teste_projeto_qt6/: .fleting  main.py  runtime_imports.py  styles.py
(+80 files in other folders)
