[project]
name = "fleting"
version = "1.1.33"
description = "Micro-framework MVC baseado em PySide6/Qt6 para aplicações desktop robustas e produtivas"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

authors = [
    { name = "Alex Yucra" }
]

keywords = [
    "fleting",
    "fleting framework",
    "pyside6",
    "qt6",
    "mvc",
    "desktop",
    "gui",
    "cli"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "PySide6",
    "rich",
    "typer",
    "psutil"
]

# ------------------------
# CLI ENTRY POINT
# ------------------------
[project.scripts]
fleting = "fleting.cli.cli:main"

# ------------------------
# URLs (PyPI)
# ------------------------
[project.urls]
Homepage = "https://github.com/alexyucra/fleting"
Documentation = "https://github.com/alexyucra/fleting/tree/main/docs"
Repository = "https://github.com/alexyucra/fleting"
Issues = "https://github.com/alexyucra/fleting/issues"

# ------------------------
# BUILD SYSTEM (Poetry)
# ------------------------
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
